Update notebook with GPT-2 exploration

--- a/play.ipynb
+++ b/play.ipynb
@@ -432,7 +432,10 @@
    "id": "fa2ea718",
    "metadata": {},
    "source": [
-    "- we will write out owen gpt model, in parralel in train gpt2. 124m into the class we are developing then set weights, then initialize from scratch and train ourselfs on documents and see what happens"
+    "- we will write out owen gpt model, in parralel in train gpt2. 124m into the class we are developing then set weights, then initialize from scratch and train ourselfs on documents and see what happens\n",
+    "\n",
+    "layer norm change and added layer norm added at the end before final classifier.. \n",
+    "\n"
    ]
   }
  ],
