small fixes formatting

--- a/play.ipynb
+++ b/play.ipynb
@@ -678,8 +678,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "id": "e944c1a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(lambda x, y: x ** 2 + y ** 2)(2, 1)  # => 5"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "e85e8387",
+   "id": "90d1d924",
    "metadata": {},
    "outputs": [],
    "source": []
