small fixes formatting

--- a/play.ipynb
+++ b/play.ipynb
@@ -675,6 +675,17 @@
     "print(x)\n",
     "print(y) # see labels in y at the same poisiton"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c7c87ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(sd_hf[\"lm_head.weight\"].shape)\n",
+    "print(sd_hf[\"transformer.wte.weight\"].shape)"
+   ]
   }
  ],
  "metadata": {
