--- a/play.ipynb
+++ b/play.ipynb
@@ -731,12 +731,108 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f29d6e36",
+   "metadata": {},
+   "source": [
+    "## Gradient Accumulation: Why We Scale Loss\n",
+    "\n",
+    "**The Problem**: We want to train with large batch sizes (e.g., 524K tokens) but can't fit them in GPU memory.\n",
+    "\n",
+    "**The Solution**: Process smaller \"micro-batches\" and accumulate gradients before updating weights.\n",
+    "\n",
+    "**The Catch**: PyTorch's `backward()` **adds** gradients to `.grad` by default. This means:\n",
+    "- Single batch of 4 samples → loss = `MEAN` of 4 losses → gradients are correctly normalized\n",
+    "- 4 micro-batches of 1 sample each → loss = `SUM` of 4 losses → gradients are 4x too large!\n",
+    "\n",
+    "**The Fix**: Divide loss by `grad_accum_steps` before calling `backward()`.\n",
+    "\n",
+    "The cells below demonstrate this with a simple MLP:\n",
+    "1. **Cell 1**: Standard batch of 4 → MSE divides by 4 automatically (reduction='mean')\n",
+    "2. **Cell 2**: 4 micro-batches of 1 → gradients accumulate as SUM, 4x larger!\n",
+    "\n",
+    "Compare the printed gradients - they should differ by a factor of 4."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "abdd6010",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([ 0.0581,  0.0379,  0.0052, -0.0604, -0.0005, -0.0092,  0.0060,  0.0362,\n",
+      "         0.0714, -0.0292])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "\n",
+    "# super simple little MLP\n",
+    "net = torch.nn.Sequential(\n",
+    "    torch.nn.Linear(16, 32),\n",
+    "    torch.nn.GELU(),\n",
+    "    torch.nn.Linear(32, 1)\n",
+    ")\n",
+    "\n",
+    "torch.random.manual_seed(42)\n",
+    "x = torch.randn(4, 16)\n",
+    "y = torch.randn(4, 1)\n",
+    "net.zero_grad()\n",
+    "yhat = net(x)\n",
+    "loss = torch.nn.functional.mse_loss(yhat, y)\n",
+    "loss.backward()\n",
+    "print(net[0].weight.grad.view(-1)[:10])\n",
+    "\n",
+    "# the loss objective here is (due to reduction='mean')\n",
+    "# L = 1/4 * [\n",
+    "#         (y[0] - yhat[0])**2 +\n",
+    "#         (y[1] - yhat[1])**2 +\n",
+    "#         (y[2] - yhat[2])**2 +\n",
+    "#         (y[3] - yhat[3])**2\n",
+    "#     ]\n",
+    "#\n",
+    "# NOTE: 1/4!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "51aba4c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([ 0.0581,  0.0379,  0.0052, -0.0604, -0.0005, -0.0092,  0.0060,  0.0362,\n",
+      "         0.0714, -0.0292])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# now let's do it with grad_accum_steps of 4, and B=1\n",
+    "# the loss objective here is different because\n",
+    "# accumulation in gradient <---> SUM in loss\n",
+    "# i.e. we instead get:\n",
+    "# L0 = 1/4(y[0] - yhat[0])**2\n",
+    "# L1 = 1/4(y[1] - yhat[1])**2\n",
+    "# L2 = 1/4(y[2] - yhat[2])**2\n",
+    "# L3 = 1/4(y[3] - yhat[3])**2\n",
+    "# L = L0 + L1 + L2 + L3\n",
+    "# NOTE: the \"normalizer\" of 1/4 is lost\n",
+    "net.zero_grad()\n",
+    "for i in range(4):\n",
+    "    yhat = net(x[i])\n",
+    "    loss = torch.nn.functional.mse_loss(yhat, y[i])\n",
+    "    loss = loss / 4\n",
+    "    loss.backward()\n",
+    "print(net[0].weight.grad.view(-1)[:10])"
+   ]
   }
  ],
  "metadata": {
