--- a/play.ipynb
+++ b/play.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "4d54ba9f",
    "metadata": {},
    "outputs": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "b67c1864",
    "metadata": {},
    "outputs": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "f069eee9",
    "metadata": {},
    "outputs": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "73939a4d",
    "metadata": {},
    "outputs": [
@@ -223,7 +223,7 @@
        "        -0.0020, -0.0815,  0.0338,  0.2365])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "cbc2a131",
    "metadata": {},
    "outputs": [
@@ -284,17 +284,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "5697eccf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1c810663b10>]"
+       "[<matplotlib.lines.Line2D at 0x1980f85a050>]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -350,17 +350,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "9a5e5a91",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1c810684290>"
+       "<matplotlib.image.AxesImage at 0x1980f8d4410>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "64469d4d",
    "metadata": {},
    "outputs": [
@@ -405,7 +405,7 @@
        " {'generated_text': \"Hellom I am a language model\\n\\nAnd you know I have a way to solve this problem\\n\\nWell I just need to find a way to help some of my friends\\n\\nI just need to find a way to help some of my friends\\n\\nSo I just need to find a way to help some of my friends\\n\\nAnd I just need to find a way to help some of my friends\\n\\nAnd I just need to find a way to help some of my friends\\n\\nI just need to find a way to help some of my friends\\n\\nSo I just need to find a way to help some of my friends\\n\\nAnd I just need to find a way to help some of my friends\\n\\nSo I just need to find a way to help some of my friends\\n\\nAnd I just need to find a way to help some of my friends\\n\\nSo I just need to find a way to help some of my friends\\n\\nAnd I just need to find a way to help some of my friends\\n\\nWe are all very close\\n\\nWe share this image\\n\\nBut when we don't\\n\\nAnd we are all very close\\n\\nAnd we share this image\\n\\nBut when we don't\\n\\nAnd we are all very close\\n\\nAnd\"}]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "id": "8d6320d1",
    "metadata": {},
    "outputs": [
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "id": "38c355a8",
    "metadata": {},
    "outputs": [
@@ -503,7 +503,7 @@
        "tensor(True)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "id": "2f233ea5",
    "metadata": {},
    "outputs": [
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "id": "2ab60de1",
    "metadata": {},
    "outputs": [
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "id": "1aa16bc5",
    "metadata": {},
    "outputs": [
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "id": "d095a0b8",
    "metadata": {},
    "outputs": [
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "id": "1c7c87ab",
    "metadata": {},
    "outputs": [
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "id": "8c99aada",
    "metadata": {},
    "outputs": [
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "id": "18c5ca33",
    "metadata": {},
    "outputs": [
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "id": "abdd6010",
    "metadata": {},
    "outputs": [
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "id": "51aba4c4",
    "metadata": {},
    "outputs": [
@@ -832,6 +832,130 @@
     "    loss = loss / 4\n",
     "    loss.backward()\n",
     "print(net[0].weight.grad.view(-1)[:10])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e26e5373",
+   "metadata": {},
+   "source": [
+    "## Training Results\n",
+    "\n",
+    "Parse and visualize the training log file to see loss curves and HellaSwag accuracy."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f980d911",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'log/log.txt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mFileNotFoundError\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[20]\u001b[39m\u001b[32m, line 30\u001b[39m\n\u001b[32m     22\u001b[39m hella3_baseline = {  \u001b[38;5;66;03m# HellaSwag for GPT-3\u001b[39;00m\n\u001b[32m     23\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33m124M\u001b[39m\u001b[33m\"\u001b[39m: \u001b[32m0.337\u001b[39m,\n\u001b[32m     24\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33m350M\u001b[39m\u001b[33m\"\u001b[39m: \u001b[32m0.436\u001b[39m,\n\u001b[32m     25\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33m774M\u001b[39m\u001b[33m\"\u001b[39m: \u001b[32m0.510\u001b[39m,\n\u001b[32m     26\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33m1558M\u001b[39m\u001b[33m\"\u001b[39m: \u001b[32m0.547\u001b[39m,\n\u001b[32m     27\u001b[39m }[sz]\n\u001b[32m     29\u001b[39m \u001b[38;5;66;03m# load the log file\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m30\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mlog/log.txt\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mr\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[32m     31\u001b[39m     lines = f.readlines()\n\u001b[32m     33\u001b[39m \u001b[38;5;66;03m# parse the individual lines, group by stream (train, val, hella)\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\repos\\gpt-2\\.venv\\Lib\\site-packages\\IPython\\core\\interactiveshell.py:344\u001b[39m, in \u001b[36m_modified_open\u001b[39m\u001b[34m(file, *args, **kwargs)\u001b[39m\n\u001b[32m    337\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[32m0\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m2\u001b[39m}:\n\u001b[32m    338\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[32m    339\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mIPython won\u001b[39m\u001b[33m'\u001b[39m\u001b[33mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m by default \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    340\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    341\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33myou can use builtins\u001b[39m\u001b[33m'\u001b[39m\u001b[33m open.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    342\u001b[39m     )\n\u001b[32m--> \u001b[39m\u001b[32m344\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mio_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[31mFileNotFoundError\u001b[39m: [Errno 2] No such file or directory: 'log/log.txt'"
+     ]
+    }
+   ],
+   "source": [
+    "# parse and visualize the logfile\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "\n",
+    "sz = \"124M\"\n",
+    "\n",
+    "# Baseline loss for OpenAI GPT-2 checkpoint\n",
+    "loss_baseline = {\n",
+    "    \"124M\": 3.2924,\n",
+    "}[sz]\n",
+    "\n",
+    "# HellaSwag baseline for GPT-2\n",
+    "hella2_baseline = {  # HellaSwag for GPT-2\n",
+    "    \"124M\": 0.294463,\n",
+    "    \"350M\": 0.375224,\n",
+    "    \"774M\": 0.431986,\n",
+    "    \"1558M\": 0.488946,\n",
+    "}[sz]\n",
+    "\n",
+    "# HellaSwag baseline for GPT-3\n",
+    "hella3_baseline = {  # HellaSwag for GPT-3\n",
+    "    \"124M\": 0.337,\n",
+    "    \"350M\": 0.436,\n",
+    "    \"774M\": 0.510,\n",
+    "    \"1558M\": 0.547,\n",
+    "}[sz]\n",
+    "\n",
+    "# load the log file - only when training is done, wait on fnie web, \n",
+    "# then add compile and remove the val loss check optionally \n",
+    "# can keep the compile and run the val loss\n",
+    "# you can also run without dll\n",
+    "with open(\"log/log.txt\", \"r\") as f:\n",
+    "    lines = f.readlines()\n",
+    "\n",
+    "# parse the individual lines, group by stream (train, val, hella)\n",
+    "streams = {}\n",
+    "for line in lines:\n",
+    "    step, stream, val = line.strip().split()\n",
+    "    if stream not in streams:\n",
+    "        streams[stream] = {}\n",
+    "    streams[stream][int(step)] = float(val)\n",
+    "\n",
+    "# convert each stream from {step: val} to (steps[], vals[])\n",
+    "# so it's easier for plotting\n",
+    "streams_xy = {}\n",
+    "for k, v in streams.items():\n",
+    "    # get all (step, val) items, sort them\n",
+    "    xy = sorted(list(v.items()))\n",
+    "    # unpack the list of tuples to tuple of lists\n",
+    "    streams_xy[k] = list(zip(*xy))\n",
+    "\n",
+    "# create figure\n",
+    "plt.figure(figsize=(16, 6))\n",
+    "\n",
+    "# Panel 1: Losses: both train and val\n",
+    "plt.subplot(121)\n",
+    "xs, ys = streams_xy[\"train\"]  # training loss\n",
+    "ys = np.array(ys)\n",
+    "plt.plot(xs, ys, label=f'nanogpt ({sz}) train loss')\n",
+    "print(\"Min Train Loss:\", min(ys))\n",
+    "xs, ys = streams_xy[\"val\"]  # validation loss\n",
+    "plt.plot(xs, ys, label=f'nanogpt ({sz}) val loss')\n",
+    "# horizontal line at GPT-2 baseline\n",
+    "if loss_baseline is not None:\n",
+    "    plt.axhline(y=loss_baseline, color='r', linestyle='--', label=f\"OpenAI GPT-2 ({sz}) checkpoint\")\n",
+    "plt.xlabel(\"steps\")\n",
+    "plt.ylabel(\"loss\")\n",
+    "plt.yscale('log')\n",
+    "plt.ylim(0.0, 4.0)\n",
+    "plt.legend()\n",
+    "plt.title(\"Loss\")\n",
+    "print(\"Min Validation Loss:\", min(ys))\n",
+    "\n",
+    "# Panel 2: HellaSwag eval\n",
+    "plt.subplot(122)\n",
+    "xs, ys = streams_xy[\"hella\"]  # HellaSwag eval\n",
+    "ys = np.array(ys)\n",
+    "plt.plot(xs, ys, label=f\"nanogpt ({sz})\")\n",
+    "# horizontal line at GPT-2 baseline\n",
+    "if hella2_baseline:\n",
+    "    plt.axhline(y=hella2_baseline, color='r', linestyle='--', label=f\"OpenAI GPT-2 ({sz}) checkpoint\")\n",
+    "if hella3_baseline:\n",
+    "    plt.axhline(y=hella3_baseline, color='g', linestyle='--', label=f\"OpenAI GPT-3 ({sz}) checkpoint\")\n",
+    "plt.xlabel(\"steps\")\n",
+    "plt.ylabel(\"accuracy\")\n",
+    "plt.legend()\n",
+    "plt.title(\"HellaSwag eval\")\n",
+    "print(\"Max Hellaswag eval:\", max(ys))\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   }
  ],
